--- a/web/style.css
+++ b/web/style.css
@@ -21,14 +21,21 @@
 	min-height: 20px;
 }
 
-
-.button {
-	width: 90%;
+.buttons_container {
 	display: flex;
+	width: 90%;
 	justify-content: center;
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 40px;
+}
+
+.button {
+	width: 40%;
+	display: flex;
+	justify-content: center;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 #table_container {
